# pipelines

./: pyproject.toml  requirements.txt
dagster/: dagster_pipeline.py
dagster/tmpi4435kqj/history/: runs.db
dagster/tmpi4435kqj/history/runs/: index.db
dagster/tmpi4435kqj/schedules/: schedules.db
example_pipeline/: database.db  norm.csv  pipeline.py
example_pipeline/origin/: original.csv
pipelines/: db.py  tasks.py
prefect1/: prefect_pipeline.py  result.csv
tests/: test_table.csv  test_test.py
