[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Leonid Shvechikov <shvechikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pytest = "^7.2.2"
pandas = "^1.5.3"
dagster = "^1.2.4"
dagit = "^1.2.4"
prefect = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pipelines = 'pipelines.cli:main'
prefect='prefect1.prefect_pipeline:prefect'

